# trustchain-agent-os

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_os/: __init__.py  agent.py  context.py  decorators.py  service.py
docs/: TRUSTCHAIN-OVERVIEW.md  api-reference.md  configuration.md  integration-guide.md  sidecar-guide.md  trust-model.md
docs/results/: demo-results-2026-03-01.md
examples/: agent_marketplace.py  demo_agent.py  demo_claude_config.json  demo_gateway.py  demo_testing_ground.py  demo_v2_protocol.py  e2e_sidecar_demo.py  framework_interop.py  hello_trust.py  llm_agents.py  marketplace.py  multi_provider_team.py  network.py  run_gateway.py  supervisor_demo.py  trust_drop.py  trust_gate.py
examples/a2a_demo/: agent_a.py  agent_b.py  requirements.txt  run_demo.py
frameworks/: base.py
frameworks/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  elizaos_adapter.py  google_adk_adapter.py  langgraph_adapter.py  openai_agents_adapter.py
frameworks/mock/: __init__.py  autogen_mock.py  crewai_mock.py  elizaos_mock.py  google_adk_mock.py  langgraph_mock.py  openai_agents_mock.py
gateway/: __init__.py  config.py  middleware.py  node.py  recorder.py  registry.py  server.py  trust_tools.py
tc_frameworks/: __init__.py
tc_frameworks/adapters/: __init__.py  agno_adapter.py  autogen_adapter.py  claude_agent_adapter.py  crewai_adapter.py  elizaos_adapter.py  google_adk_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  openai_agents_adapter.py  pydantic_ai_adapter.py  semantic_kernel_adapter.py  smolagents_adapter.py
tc_frameworks/mock/: __init__.py  autogen_mock.py  crewai_mock.py  elizaos_mock.py  google_adk_mock.py  langgraph_mock.py  openai_agents_mock.py
tests/: test_agent_os.py  test_audit_fallback.py  test_caller_verification.py  test_frameworks.py  test_gateway.py  test_integration.py  test_local_e2e.py  test_middleware.py  test_smoke_e2e.py
trustchain/: __init__.py  api.py  blockstore.py  consensus.py  crawler.py  exceptions.py  halfblock.py  netflow.py  protocol.py  sidecar.py  trust.py
trustchain-rs/: Cargo.toml  Dockerfile  install.sh
trustchain-rs/.github/workflows/: release.yml
trustchain-rs/deploy/: docker-node.toml  trustchain.service
trustchain-rs/proto/: trustchain.proto
trustchain-rs/trustchain-core/: Cargo.toml
trustchain-rs/trustchain-core/src/: blockstore.rs  chain.rs  consensus.rs  crawler.rs  error.rs  halfblock.rs  identity.rs  lib.rs  netflow.rs  protocol.rs  trust.rs  types.rs
trustchain-rs/trustchain-core/tests/: stress.rs  stress2.rs  stress3.rs  stress4.rs  system_tests.rs
trustchain-rs/trustchain-node/: Cargo.toml
trustchain-rs/trustchain-node/src/: config.rs  main.rs  node.rs
trustchain-rs/trustchain-node/tests/: integration_network.rs
trustchain-rs/trustchain-transport/: Cargo.toml  build.rs
trustchain-rs/trustchain-transport/src/: discover.rs  discovery.rs  grpc.rs  http.rs  lib.rs  mcp.rs  message.rs  pool.rs  proxy.rs  quic.rs  stun.rs  tls.rs  transport.rs
trustchain-rs/trustchain-wasm/: Cargo.toml
trustchain-rs/trustchain-wasm/src/: lib.rs
trustchain/proto/: serialization.py
trustchain/transport/: base.py  http.py
