[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustchain-agent-os"
version = "2.0.0"
description = "TrustChain Agent OS — Trust-native protocol layer for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Vlad Levytskyy" },
]
dependencies = [
    "trustchain-sdk>=2.0",
    "fastmcp>=3.0",
]

[project.urls]
Homepage = "https://github.com/viftode4/trustchain-agent-os"
Repository = "https://github.com/viftode4/trustchain-agent-os"
Issues = "https://github.com/viftode4/trustchain-agent-os/issues"

[project.optional-dependencies]
gateway = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
viz = [
    "streamlit>=1.30",
    "plotly>=5.0",
]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.80"]
autogen = ["ag2>=0.6"]
google-adk = ["google-adk>=1.0"]
openai-agents = ["openai-agents>=0.0.5"]
all-frameworks = [
    "langgraph>=0.2",
    "crewai>=0.80",
    "ag2>=0.6",
    "google-adk>=1.0",
    "openai-agents>=0.0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent_os", "gateway", "tc_frameworks"]
