[package]
name = "trustchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TrustChain protocol core — identity, blocks, storage, trust computation"

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
petgraph = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
