[package]
name = "trustchain-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TrustChain standalone node binary"

[[bin]]
name = "trustchain-node"
path = "src/main.rs"

[dependencies]
trustchain-core = { workspace = true }
trustchain-transport = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = { workspace = true }
tempfile = "3"
