[package]
name = "trustchain-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TrustChain WASM bindings for browser nodes"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
trustchain-core = { path = "../trustchain-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
hex = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
